Fixed header spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,6 +12,8 @@
 
 .site-header .site-title {
   font-size: $h2;
+  margin-top: 0.25rem;
+  padding-top: 1rem;
 }
 
 .site-nav {
